Changes in version 0.9.8

o ADD: `redundancy.analysis` operates as a comprehensive handling of variable redundancy in multivariate data (see `?redundancy.analysis`)

o DEFUNCT: `node.redundant`, `node.redundant.names`, and `node.redundant.combine` will be defunct in next version. Please use `redundancy.analysis`

o ADD: a new function to compute a parametric Bootstrap Test for the Ergodicity Information Index (see `?boot.ergoInfo`)

o ADD: basic Shiny functionality (`EGA` only)

o ADD: a new function to compute a Monte-Carlo Test for the Ergodicity Information Index (see `?mctest.ergoInfo`)

o ADD: a new function to compute the Ergodicity Information Index (see `?ergoInfo`)

o UPDATE: new plotting scheme using *network* and *GGally* packages

o ADD: a function to produce an automated Methods section for EGA functions (see `?EGA.methods.section`)

o UPDATE: `bootEGA` now implements the updated `EGA` algorithm

o UPDATE: ega.wmt data (unidimensional)

o UPDATE: `itemStability` plot defaults ("GGally" color scheme) and examples (manipulating plot)

o ADD: multilayer networks for behavioral and brain data (see `?mlnEGA`)

o ADD: EGA color palettes (see `?color_palette_EGA`)


Changes in version 0.9.7

o UPDATE: `LCT` neural network weights were updated (parametric relu activation function)

o FIX: naming in `EGA`

o FIX: output network matrix in `EGA` when data are input

o UPDATE: citation version

o UPDATE: `node.redundant` now provides a full plot of redundancies detected, descriptive statistics including the critical value, central tendency descriptive statistics, and the distribution the significant values were determined from (thanks to Luis Garrido for the suggestion!)


Changes in version 0.9.6

o UPDATE: `LCT` updated with neural network implementation


Changes in version 0.9.5

o ADD: loadings comparison test function added (see `LCT`)

o FIX: named community memberships in `itemStability` and `dimStability`
