@@ -7,60 +7,60 @@
 #' Name of color scheme (see \code{\link[RColorBrewer]{RColorBrewer}}).
 #' Defaults to \code{"polychrome"}.
 #' \code{\link[EGAnet]{EGA}} palettes:
-#' 
+#'
 #' \itemize{
-#' 
+#'
 #' \item{\code{"polychrome"}}
 #' {Default 20 color palette}
-#' 
+#'
 #' \item{\code{"blue.ridge1"}}
 #' {Palette inspired by the Blue Ridge Mountains}
-#' 
+#'
 #' \item{\code{"blue.ridge2"}}
 #' {Second palette inspired by the Blue Ridge Mountains}
-#' 
+#'
 #' \item{\code{"rio"}}
 #' {Palette inspired by Rio de Janiero, Brazil}
-#' 
+#'
 #'  \item{\code{"itacare"}}
 #' {Palette inspired by Itacare, Brazil}
-#' 
+#'
 #' }
-#' 
+#'
 #' For custom colors, enter HEX codes for each dimension in a vector
-#' 
+#'
 #' @param wc Vector.
 #' A vector representing the community (dimension) membership
 #' of each node in the network. \code{NA} values mean that the node
 #' was disconnected from the network
 #'
-#' @author Hudson Golino <hfg9s at virginia.edu>, Alexander P. Christensen <alexpaulchristensen at gmail.com>, Maria Dolores Nieto <acinodam at gmail.com> and Luis E. Garrido <garrido.luiseduardo at gmail.com>
+#' @author Hudson Golino <hfg9s at virginia.edu>, Alexander P. Christensen <alexpaulchristensen at gmail.com>
 #'
 #' @return Vector of colors for community memberships
-#' 
+#'
 #' @examples
 #' # Default
 #' color_palette_EGA(name = "polychrome", wc = ega.wmt$wc)
-#' 
+#'
 #' # Blue Ridge Moutains 1
 #' color_palette_EGA(name = "blue.ridge1", wc = ega.wmt$wc)
-#' 
+#'
 #' # Custom
 #' color_palette_EGA(name = "#7FD1B9", wc = ega.wmt$wc)
-#' 
+#'
 #' @export
 #'
 # Updated 17.12.2020
 ## Function to produce color palettes for EGA
 color_palette_EGA <- function (name, wc)
 {
-  
+
   # All palettes
   all_palettes <- c(row.names(RColorBrewer::brewer.pal.info),
                     "polychrome", "blue.ridge1", "blue.ridge2",
                     "rio", "itacare"
                     )
-  
+
   # Default palette
   ## Polychrome (20 colors)
   polychrome <- toupper(
@@ -71,11 +71,11 @@ color_palette_EGA <- function (name, wc)
             "C792DF", "60b6f1", "f9a470", "bc556f", "f7a2a1"
           ), sep = "")
   )
-  
-  
+
+
   # Check for custom
   if(!all(name %in% all_palettes)){
-    
+
     if(length(name) != max(wc, na.rm = TRUE)){
       return(get("polychrome")[color.sort(wc)])
       warning(
@@ -87,30 +87,30 @@ color_palette_EGA <- function (name, wc)
         )
       )
     }
-    
+
     if(length(grep("#", name)) != length(name)){
-      
+
       # Missing hashtags
       targets <- setdiff(1:length(name), grep("#", name))
-      
+
       name[targets] <- paste("#", name[targets], sep = "")
-      
+
     }
-    
+
     return(name[color.sort(wc)])
-    
+
   }else{
-    
+
     # Check for RColorBrewer palette
     if(name %in% row.names(RColorBrewer::brewer.pal.info)){
-      
+
       return(RColorBrewer::brewer.pal(max(color.sort(wc), na.rm = TRUE), name)[color.sort(wc)])
-      
+
     }else{# EGA palettes
-      
+
       # Make name lowercase
       name <- tolower(name)
-      
+
       ## Polychrome (20 colors)
       polychrome <- toupper(
         paste("#",
@@ -120,7 +120,7 @@ color_palette_EGA <- function (name, wc)
                 "C792DF", "60b6f1", "f9a470", "bc556f", "f7a2a1"
               ), sep = "")
       )
-      
+
       ## Blue Ridge Mountains 1 (7 colors)
       blue.ridge1 <- toupper(
         paste("#",
@@ -128,7 +128,7 @@ color_palette_EGA <- function (name, wc)
                 "7f616e", "4c6e98", "24547e", "272a39"
               ), sep = "")
       )
-      
+
       ## Blue Ridge Mountains 2 (10 colors)
       blue.ridge2 <- toupper(
         paste("#",
@@ -137,7 +137,7 @@ color_palette_EGA <- function (name, wc)
                 "e2a187", "e3ccb5", "c48480", "fcac6c"
               ), sep = "")
       )
-      
+
       ## Blue Ridge Mountains 2 (10 colors)
       blue.ridge2 <- toupper(
         paste("#",
@@ -146,7 +146,7 @@ color_palette_EGA <- function (name, wc)
                 "e2a187", "e3ccb5", "c48480", "fcac6c"
               ), sep = "")
       )
-      
+
       ## Rio (10 colors)
       rio <- toupper(
         paste("#",
@@ -155,23 +155,23 @@ color_palette_EGA <- function (name, wc)
                 "ea897c", "9c8062", "524954", "54544c"
               ), sep = "")
       )
-      
+
       ## Itacare (10 colors)
       itacare <- toupper(
         paste("#",
-              c("232b17", "cbbda4", "2888ab", 
+              c("232b17", "cbbda4", "2888ab",
                 "0581c9", "7e8056", "d9e7e6",
                 "8ec0c5", "a58a60", "ad9342", "a96c2e"
               ), sep = "")
       )
-      
+
       if(exists(name)){
         return(get(name)[color.sort(wc)])
       }else{
         return(get("polychrome")[color.sort(wc)])
       }
-      
+
     }
-    
+
   }
 }
