@@ -1,5 +1,7 @@
 Changes in version 0.9.8
 
+o ADD: `color_palette_EGA` New EGA palettes for plotting ggnet2 EGA network plots.
+
 o ADD: `redundancy.analysis` operates as a comprehensive handling of variable redundancy in multivariate data (see `?redundancy.analysis`)
 
 o DEFUNCT: `node.redundant`, `node.redundant.names`, and `node.redundant.combine` will be defunct in next version. Please use `redundancy.analysis`
